Fix single table action alignment

--- a/packages/webblocks/src/css/primitives/table.css
+++ b/packages/webblocks/src/css/primitives/table.css
@@ -121,6 +121,7 @@
 .wb-table-actions {
   width: 1%;
   white-space: nowrap;
+  text-align: left;
 }
 
 .wb-table-actions .wb-action-group {
